fix viewport size on mobile

--- a/src/base.css
+++ b/src/base.css
@@ -88,3 +88,21 @@ button:hover {
         margin-bottom: 15px;
     }
 }
+
+@media (max-width: 480px) {
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 24px;
+    }
+
+    h4 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+}
